[package]
name = "http-serde-ext-ios"
version = "1.0.0"
authors = ["Andrew Toth"]
license = "MIT"
homepage = "https://github.com/integration-os/http-serde-ext-ios"
repository = "https://github.com/integration-os/http-serde-ext-ios"
documentation = "https://docs.rs/http-serde-ext-ios/"
description = "serde support for http crate types Request, Response, Uri, StatusCode, HeaderMap, Method, in Option or other collections"
keywords = ["http", "serde", "serialization", "deserialize", "url"]
categories = ["encoding", "network-programming", "web-programming"]
readme = "README.md"
edition = "2021"

[dependencies]
http = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bincode = "1.3"
fake = { version = "2.9.2", features = ["http"] }
postcard = { version = "1.0", features = ["alloc"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
